docs: Add info to README.md file

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build": "node esbuild.mjs",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.js",
+    "install": "npm install && cd client && npm install",
+    "build:client": "cd client && npm run build",
+    "build:server": "node esbuild.mjs",
+    "start:client": "cd client && npm run start",
+    "start:server": "node dist/index.js",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "nodemon src/index.js",
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix",
     "format": "prettier --write .",
