--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.3",
     "esbuild": "^0.17.19",
     "express": "^4.18.2",
+    "express-list-endpoints": "^6.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0"
