--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "esbuild": "^0.17.19",
     "express": "^4.18.2",
     "express-list-endpoints": "^6.0.0",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0"
