--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "install": "npm install && cd client && npm install",
+    "inst": "npm install && cd client && npm install",
     "build:client": "cd client && npm run build",
     "build:server": "node esbuild.mjs",
     "start:client": "cd client && npm run start",
